--- a/app/src/main/res/layout/activity_detail_product.xml
+++ b/app/src/main/res/layout/activity_detail_product.xml
@@ -63,13 +63,13 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
+        tools:text="Rp. 0.0"
         android:padding="8dp"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/product_name"
-        tools:text="Rp 0.00" />
+        app:layout_constraintTop_toBottomOf="@id/product_name"/>
 
     <LinearLayout
         android:id="@+id/links_container"
@@ -113,5 +113,21 @@
         app:layout_constraintTop_toTopOf="@id/add_link"
         app:layout_constraintBottom_toBottomOf="@+id/add_link"
         app:layout_constraintEnd_toEndOf="@id/links_container"/>
+
+    <Button
+        android:id="@+id/btn_edit_produk"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="112dp"
+        android:text="Edit Produk"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.422"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/add_link"
+        app:layout_constraintVertical_bias="0.473" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
