linkyi(list dan edit)
- night mode
	- profile
	- lenkapi toko
- tampilan profil
- tampilan detail produk
- tampilan edit/detail linkyi(bio links dan headline)
- card list produk
- aktivasi produk
- tampilan list linkyi(bio links dan headline)
- loading
	-linkyi
	-products
	-detail product

--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -78,6 +78,7 @@
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/nameEditText"
+                android:maxLength="40"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
