--- a/app/src/main/res/layout/fragment_linkyi.xml
+++ b/app/src/main/res/layout/fragment_linkyi.xml
@@ -7,6 +7,12 @@
     android:orientation="vertical"
     tools:context=".ui.linkyi.LinkyiFragment">
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center|top"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_products"
         android:layout_width="match_parent"
