--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,27 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.profile.ProfileFragment">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="16dp">
-
             <!-- Profile Image and Name -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
                 android:gravity="center"
+                android:orientation="vertical"
                 android:padding="16dp">
 
                 <ImageView
@@ -37,9 +32,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:text="Linkyi Shop"
-                    android:textSize="22sp"
-                    android:textColor="#000000"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold"
+                    android:textAppearance="?textAppearanceTitleLarge" />
 
                 <TextView
                     android:id="@+id/tvDesc"
@@ -47,180 +41,176 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
                     android:text="Deskripsi"
-                    android:textSize="17sp"
-                    android:textColor="#888888"/>
+                    android:textAppearance="?textAppearanceTitleMedium" />
             </LinearLayout>
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <RelativeLayout
-                    android:id="@+id/editToko"
-                    android:layout_width="match_parent"
-                    android:layout_height="56dp"
-                    android:orientation="horizontal"
-                    android:gravity="center_vertical"
-                    android:padding="16dp"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:background="?android:attr/selectableItemBackground">
-
-                    <ImageView
-                        android:id="@+id/ivEditToko"
-                        android:layout_width="28dp"
-                        android:layout_height="28dp"/>
-
-                    <TextView
-                        android:id="@+id/tvEditBaby"
-                        android:layout_width="wrap_content"
+                <!-- Profile Card -->
+            <com.google.android.material.card.MaterialCardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_toEndOf="@id/ivEditToko"
-                        android:layout_marginStart="16dp"
-                        android:text="Edit Toko"
-                        android:textSize="16sp"
-                        android:textColor="#000000"/>
+                        android:orientation="vertical">
 
-                    <ImageView
-                        android:id="@+id/icRight"
-                        android:layout_width="28dp"
-                        android:layout_height="28dp"
-                        android:layout_alignParentEnd="true"
-                        android:src="@drawable/baseline_right_arrow_24"
-                        android:clickable="true"
-                        android:focusable="true"/>
+                        <RelativeLayout
+                            android:id="@+id/editToko"
+                            android:layout_width="match_parent"
+                            android:layout_height="56dp"
+                            android:background="?android:attr/selectableItemBackground"
+                            android:clickable="true"
+                            android:focusable="true"
+                            android:gravity="center_vertical"
+                            android:orientation="horizontal"
+                            android:padding="16dp">
 
-                </RelativeLayout>
-                <com.google.android.material.divider.MaterialDivider
-                    android:layout_width="match_parent"
-                    android:layout_marginRight="30dp"
-                    android:layout_height="wrap_content"/>
+                            <ImageView
+                                android:id="@+id/ivEditToko"
+                                android:layout_width="28dp"
+                                android:layout_height="28dp" />
 
-                <!-- Terms & Privacy Policy -->
-                <RelativeLayout
-                    android:id="@+id/theme"
-                    android:layout_width="match_parent"
-                    android:layout_height="56dp"
-                    android:orientation="horizontal"
-                    android:gravity="center_vertical"
-                    android:padding="16dp"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:background="?android:attr/selectableItemBackground">
+                            <TextView
+                                android:id="@+id/tvEditBaby"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="16dp"
+                                android:layout_toEndOf="@id/ivEditToko"
+                                android:text="Edit Toko"
+                                android:textAppearance="?textAppearanceTitleSmall" />
 
-                    <ImageView
-                        android:id="@+id/ivTheme"
-                        android:layout_width="28dp"
-                        android:layout_height="28dp" />
+                            <ImageView
+                                android:id="@+id/icRight"
+                                android:layout_width="28dp"
+                                android:layout_height="28dp"
+                                android:layout_alignBottom="@+id/tvEditBaby"
+                                android:layout_alignParentEnd="true"
+                                android:clickable="true"
+                                android:focusable="true"
+                                android:src="@drawable/baseline_right_arrow_24" />
 
-                    <TextView
-                        android:id="@+id/tvTerms"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_toEndOf="@id/ivTheme"
-                        android:layout_marginStart="16dp"
-                        android:text="Tema"
-                        android:textSize="16sp"
-                        android:textColor="#000000"/>
+                        </RelativeLayout>
 
-                    <ImageView
-                        android:id="@+id/icRightTheme"
-                        android:layout_width="28dp"
-                        android:layout_height="28dp"
-                        android:layout_alignParentEnd="true"
-                        android:src="@drawable/baseline_right_arrow_24"
-                        android:clickable="true"
-                        android:focusable="true"/>
-                </RelativeLayout>
-                <com.google.android.material.divider.MaterialDivider
-                    android:layout_width="match_parent"
-                    android:layout_marginRight="30dp"
-                    android:layout_height="wrap_content"/>
+                        <com.google.android.material.divider.MaterialDivider
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
+                                <!-- Terms & Privacy Policy -->
+                        <RelativeLayout
+                            android:id="@+id/theme"
+                            android:layout_width="match_parent"
+                            android:layout_height="56dp"
+                            android:background="?android:attr/selectableItemBackground"
+                            android:clickable="true"
+                            android:focusable="true"
+                            android:gravity="center_vertical"
+                            android:orientation="horizontal"
+                            android:padding="16dp">
 
-                <!-- About -->
-                <RelativeLayout
-                    android:id="@+id/updatePassword"
-                    android:layout_width="match_parent"
-                    android:layout_height="56dp"
-                    android:orientation="horizontal"
-                    android:gravity="center_vertical"
-                    android:padding="16dp"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:background="?android:attr/selectableItemBackground">
+                            <ImageView
+                                android:id="@+id/ivTheme"
+                                android:layout_width="28dp"
+                                android:layout_height="28dp" />
 
-                    <ImageView
-                        android:id="@+id/ivUpdatePassword"
-                        android:layout_width="28dp"
-                        android:layout_height="28dp" />
+                            <TextView
+                                android:id="@+id/tvTerms"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="16dp"
+                                android:layout_toEndOf="@id/ivTheme"
+                                android:text="Tema"
+                                android:textAppearance="?textAppearanceTitleSmall" />
 
-                    <TextView
-                        android:id="@+id/tvAbout"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_toEndOf="@id/ivUpdatePassword"
-                        android:layout_marginStart="16dp"
-                        android:text="Update Password"
-                        android:textSize="16sp"
-                        android:textColor="#000000"/>
+                            <ImageView
+                                android:id="@+id/icRightTheme"
+                                android:layout_width="28dp"
+                                android:layout_height="28dp"
+                                android:layout_alignBottom="@+id/tvTerms"
+                                android:layout_alignParentEnd="true"
+                                android:clickable="true"
+                                android:focusable="true"
+                                android:src="@drawable/baseline_right_arrow_24" />
+                        </RelativeLayout>
 
-                    <ImageView
-                        android:id="@+id/icRightAbout"
-                        android:layout_width="28dp"
-                        android:layout_height="28dp"
-                        android:layout_alignParentEnd="true"
-                        android:src="@drawable/baseline_right_arrow_24"
-                        android:clickable="true"
-                        android:focusable="true"/>
-                </RelativeLayout>
-                <com.google.android.material.divider.MaterialDivider
-                    android:layout_width="match_parent"
-                    android:layout_marginRight="30dp"
-                    android:layout_height="wrap_content"/>
+                        <com.google.android.material.divider.MaterialDivider
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
 
-                <!-- Log Out -->
-                <RelativeLayout
-                    android:id="@+id/button_logout"
-                    android:layout_width="match_parent"
-                    android:layout_height="56dp"
-                    android:orientation="horizontal"
-                    android:gravity="center_vertical"
-                    android:padding="16dp"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:background="?android:attr/selectableItemBackground">
+                        <!-- About -->
+                        <RelativeLayout
+                            android:id="@+id/updatePassword"
+                            android:layout_width="match_parent"
+                            android:layout_height="56dp"
+                            android:background="?android:attr/selectableItemBackground"
+                            android:clickable="true"
+                            android:focusable="true"
+                            android:gravity="center_vertical"
+                            android:orientation="horizontal"
+                            android:padding="16dp">
 
-                    <ImageView
-                        android:id="@+id/ivLogout"
-                        android:layout_width="28dp"
-                        android:layout_height="28dp" />
+                            <ImageView
+                                android:id="@+id/ivUpdatePassword"
+                                android:layout_width="28dp"
+                                android:layout_height="28dp" />
 
-                    <TextView
-                        android:id="@+id/tvLogout"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_toEndOf="@id/ivLogout"
-                        android:layout_marginStart="16dp"
-                        android:text="Log Out"
-                        android:textSize="16sp"
-                        android:textColor="#000000"/>
+                            <TextView
+                                android:id="@+id/tvAbout"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="16dp"
+                                android:layout_toEndOf="@id/ivUpdatePassword"
+                                android:text="Update Password"
+                                android:textAppearance="?textAppearanceTitleSmall" />
 
-                    <ImageView
-                        android:id="@+id/icRightLogout"
-                        android:layout_width="28dp"
-                        android:layout_height="28dp"
-                        android:layout_alignParentEnd="true"
-                        android:src="@drawable/baseline_right_arrow_24"
-                        android:clickable="true"
-                        android:focusable="true"/>
-                </RelativeLayout>
-                <com.google.android.material.divider.MaterialDivider
-                    android:layout_width="match_parent"
-                    android:layout_marginRight="30dp"
-                    android:layout_height="wrap_content"/>
-            </LinearLayout>
+                            <ImageView
+                                android:id="@+id/icRightAbout"
+                                android:layout_width="28dp"
+                                android:layout_height="28dp"
+                                android:layout_alignBottom="@+id/tvAbout"
+                                android:layout_alignParentEnd="true"
+                                android:clickable="true"
+                                android:focusable="true"
+                                android:src="@drawable/baseline_right_arrow_24" />
+                        </RelativeLayout>
+
+                        <com.google.android.material.divider.MaterialDivider
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"/>
+
+                        <!-- Log Out -->
+                        <RelativeLayout
+                            android:id="@+id/button_logout"
+                            android:layout_width="match_parent"
+                            android:layout_height="56dp"
+                            android:background="?android:attr/selectableItemBackground"
+                            android:clickable="true"
+                            android:focusable="true"
+                            android:gravity="center_vertical"
+                            android:orientation="horizontal"
+                            android:padding="16dp">
+
+                            <ImageView
+                                android:id="@+id/ivLogout"
+                                android:layout_width="28dp"
+                                android:layout_height="28dp" />
+
+                            <TextView
+                                android:id="@+id/tvLogout"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="16dp"
+                                android:layout_toEndOf="@id/ivLogout"
+                                android:text="Log Out"
+                                android:textAppearance="?textAppearanceTitleSmall" />
+
+                            <ImageView
+                                android:id="@+id/icRightLogout"
+                                android:layout_width="28dp"
+                                android:layout_height="28dp"
+                                android:layout_alignBottom="@+id/tvLogout"
+                                android:layout_alignParentEnd="true"
+                                android:clickable="true"
+                                android:focusable="true"
+                                android:src="@drawable/baseline_right_arrow_24" />
+                        </RelativeLayout>
+                    </LinearLayout>
+            </com.google.android.material.card.MaterialCardView>
         </LinearLayout>
-    </ScrollView>
-</RelativeLayout>
+</ScrollView>
