--- a/app/src/main/res/layout/products_card.xml
+++ b/app/src/main/res/layout/products_card.xml
@@ -18,6 +18,7 @@
             android:id="@+id/profileImageView"
             android:layout_width="match_parent"
             android:layout_height="150dp"
+            android:scaleType="centerCrop"
             card_view:layout_constraintStart_toStartOf="parent"
             card_view:layout_constraintTop_toTopOf="parent"
             card_view:layout_constraintEnd_toEndOf="parent"
