--- a/app/src/main/res/layout/activity_detail_product.xml
+++ b/app/src/main/res/layout/activity_detail_product.xml
@@ -34,7 +34,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="Hapus"
+        android:text="@string/hapus"
         android:backgroundTint="@color/md_theme_error"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -150,7 +150,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="start|center_vertical"
-            android:hint="Ketik Link Baru"
+            android:hint="@string/ketik_link_baru"
             android:inputType="textEmailAddress"
             tools:ignore="SpeakableTextPresentCheck" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -159,7 +159,7 @@
         android:id="@+id/btn_add_link"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Tambahkan"
+        android:text="@string/tambahkan"
         app:layout_constraintTop_toTopOf="@+id/add_link"
         app:layout_constraintBottom_toBottomOf="@+id/add_link"
         app:layout_constraintEnd_toEndOf="@+id/btn_edit_produk"/>
@@ -169,12 +169,12 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="48dp"
         android:layout_marginEnd="24dp"
-        android:text="Edit Produk"
+        android:layout_marginBottom="16dp"
+        android:text="@string/edit_produk"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
