--- a/app/src/main/res/layout/activity_new_password.xml
+++ b/app/src/main/res/layout/activity_new_password.xml
@@ -28,7 +28,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="164dp"
         android:layout_marginEnd="32dp"
-        android:text="Password Baru"
+        android:text="@string/password_baru"
         android:textSize="38sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -55,7 +55,7 @@
             android:id="@+id/passwordEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Password"
+            android:hint="@string/password"
             android:inputType="textPassword"
             android:gravity="start|center_vertical"
             tools:ignore="SpeakableTextPresentCheck" />
@@ -79,7 +79,7 @@
             android:id="@+id/confirmPasswordEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Konfirmasi Password"
+            android:hint="@string/konfirmasi_password"
             android:inputType="textPassword"
             android:gravity="start|center_vertical"
             tools:ignore="SpeakableTextPresentCheck" />
@@ -102,7 +102,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="number"
-            android:hint="OTP"
+            android:hint="@string/otp"
             tools:ignore="SpeakableTextPresentCheck" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -110,7 +110,7 @@
         android:id="@+id/btn_submit"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Kirim"
+        android:text="@string/kirim"
         app:layout_constraintTop_toBottomOf="@id/otpEditTextLayout"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
