--- a/app/src/main/res/layout/activity_update_password.xml
+++ b/app/src/main/res/layout/activity_update_password.xml
@@ -40,7 +40,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="164dp"
         android:layout_marginEnd="32dp"
-        android:text="Update Password"
+        android:text="@string/update_password"
         android:textSize="38sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -66,7 +66,7 @@
             android:id="@+id/passwordUpEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Password"
+            android:hint="@string/password"
             android:inputType="textPassword"
             android:gravity="start|center_vertical"
             tools:ignore="SpeakableTextPresentCheck" />
@@ -90,7 +90,7 @@
             android:id="@+id/confirmPasswordUpEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Konfirmasi Password"
+            android:hint="@string/konfirmasi_password"
             android:inputType="textPassword"
             android:gravity="start|center_vertical"
             tools:ignore="SpeakableTextPresentCheck" />
@@ -114,7 +114,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
-            android:hint="Current Password"
+            android:hint="@string/password_sekarang"
             tools:ignore="SpeakableTextPresentCheck" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -122,7 +122,7 @@
         android:id="@+id/btn_update"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Update"
+        android:text="@string/ubah"
         app:layout_constraintTop_toBottomOf="@id/passwordLamaTextLayout"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
