--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -13,7 +13,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="-600dp"
         android:layout_marginEnd="8dp"
-        android:text="Analisis Toko"
+        android:text="@string/analisis_toko"
         android:textAlignment="center"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -45,7 +45,7 @@
                 android:id="@+id/text_total_barang"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Total Barang"
+                android:text="@string/total_barang"
                 android:textSize="16sp"
                 android:textColor="@color/md_theme_scrim" />
 
@@ -53,7 +53,7 @@
                 android:id="@+id/total_barang"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="0"
+                android:text="@string/_0"
                 android:textSize="24sp"
                 android:textStyle="bold"
                 android:textColor="@color/md_theme_scrim" />
@@ -84,7 +84,7 @@
                 android:id="@+id/text_jumlah_klik"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Total Klik"
+                android:text="@string/total_klik"
                 android:textSize="14sp"
                 android:textColor="@color/md_theme_scrim" />
 
@@ -92,7 +92,7 @@
                 android:id="@+id/jumlah_klik"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="0"
+                android:text="@string/_0"
                 android:textSize="24sp"
                 android:textStyle="bold"
                 android:textColor="@color/md_theme_scrim" />
@@ -123,7 +123,7 @@
                 android:id="@+id/text_total_kategori"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Total Kategori"
+                android:text="@string/total_kategori"
                 android:textSize="14sp"
                 android:textColor="@color/md_theme_scrim" />
 
@@ -131,7 +131,7 @@
                 android:id="@+id/total_kategori"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="0"
+                android:text="@string/_0"
                 android:textSize="24sp"
                 android:textStyle="bold"
                 android:textColor="@color/md_theme_scrim" />
@@ -162,7 +162,7 @@
                 android:id="@+id/text_jumlah_pengunjung"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Total Pengunjung"
+                android:text="@string/total_pengunjung"
                 android:textSize="14sp"
                 android:textColor="@color/md_theme_scrim" />
 
@@ -170,11 +170,22 @@
                 android:id="@+id/jumlah_pengunjung"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="0"
+                android:text="@string/_0"
                 android:textSize="24sp"
                 android:textStyle="bold"
                 android:textColor="@color/md_theme_scrim" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
