--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -19,10 +19,10 @@
                 android:orientation="vertical"
                 android:padding="16dp">
 
-                <ImageView
+                <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/ivThumbnail"
-                    android:layout_width="272dp"
-                    android:layout_height="197dp"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
                     android:layout_gravity="center"
                     android:src="@drawable/home" />
 
@@ -31,7 +31,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:text="Linkyi Shop"
+                    android:text="@string/app_name"
                     android:textStyle="bold"
                     android:textAppearance="?textAppearanceTitleLarge" />
 
@@ -40,7 +40,16 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
-                    android:text="Deskripsi"
+                    android:text="@string/deskripsi"
+                    android:textAppearance="?textAppearanceTitleSmall" />
+
+                <TextView
+                    android:id="@+id/tvLinks"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:text="@string/generate_base_link"
+                    android:textColor="@color/md_theme_primary"
                     android:textAppearance="?textAppearanceTitleMedium" />
             </LinearLayout>
                 <!-- Profile Card -->
@@ -74,7 +83,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="16dp"
                                 android:layout_toEndOf="@id/ivEditToko"
-                                android:text="Edit Toko"
+                                android:text="@string/edit_toko"
                                 android:textAppearance="?textAppearanceTitleSmall" />
 
                             <ImageView
@@ -115,7 +124,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="16dp"
                                 android:layout_toEndOf="@id/ivTheme"
-                                android:text="Tema"
+                                android:text="@string/tema"
                                 android:textAppearance="?textAppearanceTitleSmall" />
 
                             <ImageView
@@ -156,7 +165,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="16dp"
                                 android:layout_toEndOf="@id/ivUpdatePassword"
-                                android:text="Update Password"
+                                android:text="@string/update_password"
                                 android:textAppearance="?textAppearanceTitleSmall" />
 
                             <ImageView
@@ -197,7 +206,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="16dp"
                                 android:layout_toEndOf="@id/ivLogout"
-                                android:text="Log Out"
+                                android:text="@string/logout"
                                 android:textAppearance="?textAppearanceTitleSmall" />
 
                             <ImageView
@@ -212,5 +221,16 @@
                         </RelativeLayout>
                     </LinearLayout>
             </com.google.android.material.card.MaterialCardView>
+
+            <ProgressBar
+                android:id="@+id/progressBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
         </LinearLayout>
 </ScrollView>
