--- a/app/src/main/res/layout/linkyi_card.xml
+++ b/app/src/main/res/layout/linkyi_card.xml
@@ -28,7 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginVertical="10dp"
-            android:text="Links"
+            android:text="@string/links2"
             android:textAppearance="?textAppearanceTitleMedium"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
